# wikipedia

./: Cargo.toml  foo.txt
src/: binary_search_line.rs  hierarchical_map.rs  main.rs  memoise.rs  page.rs  progress_bar.rs  titles.rs
src/commands/: download.rs  links.rs  long_paths.rs  mod.rs  random_article.rs  shortest_path.rs
src/parse/: mod.rs  parse_html_index.rs  wikitext.rs  xml.rs
