[package]
name = "wikipedia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
md5 = "0.7.0"
nom = "7.1.3"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
