[package]
name = "wikipedia"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bimap = { version = "0.6.3", features = ["serde"] }
bzip2 = "0.4.4"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
console = "0.15.8"
crossbeam = "0.8.4"
flate2 = "1.0.30"
html-escape = "0.2.13"
indicatif = "0.17.8"
md5 = "0.7.0"
nom = "7.1.3"
percent-encoding = "2.3.1"
pipe = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ureq = "2.9.7"
